--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "silbinarywolf/silverstripe-ralph",
     "description": "Profiling tools to help you speed up your slow code.",
     "type": "silverstripe-module",
-    "keywords": ["silverstripe"],
+    "keywords": ["silverstripe", "debugger", "profiler", "tool"],
     "license": "BSD-3-Clause",
     "authors": [
     {
@@ -15,7 +15,7 @@
     "extra": {
         "installer-name": "ralph",
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.1.x-dev"
         }
     }
 }
